--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Arsheen and I'm a <span class="typing-2"></span></div>
-                    <p>started ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
+                    <p>Started of learing as a hair dresser at L'Oreal training center ahmedabad, gradually getting found of the work started investing more time in it. As a result picking up hair dressing professionally. Inspired by xyz started with Makeup as of the lockdown improving on it. With growing confidence started freelancing and working as a head hair dresser at present</p>
                     <a href="#">Download CV</a>
                 </div>
             </div>
