--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                     <div class="box">
                         
                         <div class="text">Hair dressing</div>
-                        <p><li>Hair color</li>
-                            <li>Ombre highligths</li>
-                            <li>French balayage highlights</li>
-                            <li>Permanent smoothing keratin</li>
-                            <li>Haircutting</li>
-                            <li>Hair styling</li>
+                        <p>Hair color, 
+                            Ombre highligths, 
+                            french balayage highlights, 
+                            Permanent smoothening keretin, 
+                            Haircutting, 
+                            Hair styling
                             </p>
                     </div>
                 </div>
