--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <div class="text">Hair dressing</div>
                         <p>Hair color, 
                             Ombre highligths, 
-                            french balayage highlights, 
+                            French balayage highlights, 
                             Permanent smoothening keretin, 
                             Haircutting, 
                             Hair styling
@@ -86,14 +86,18 @@
                     <div class="box">
                         
                         <div class="text">Makeup Artist</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>Bridal look, 
+                            Party look, 
+                            Natural glam look, 
+                            Creative makeup
+                            </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         
                         <div class="text">Free lancer</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>Freelancing provided as per the compatiblity of time and place and the work to be done</p>
                     </div>
                 </div>
                </div>
