--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
                         <p>Bridal look, 
                             Party look, 
                             Natural glam look, 
-                            Creative makeup
+                            Creative makeup,
+                            Water Based Makeup,
+                            Powder based Makeup,
+                            Airbrushed Makeup
                             </p>
                     </div>
                 </div>
