--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="box">
                         
                         <div class="text">Free lancer</div>
-                        <p>Freelancing provided as per the compatiblity of time and place and the work to be done</p>
+                        <p>Freelancing provided as per the compatiblity of time and place and the work to be done. The merchendise in question will be brought by me</p>
                     </div>
                 </div>
                </div>
