--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
+                    <p>After receiving beautician training at <a href="https://in-style-beatuty-salon.business.site/" style="color: crimson;">InStyle Beauty Salon</a>, Went on to <a href="https://www.loreal.com/en/india/" style="color: crimson;">L'Oreal professional</a> hairdresser training. Explored at freelancing for a while. At the moment, I'm employed at <a href="https://lafemmeindia.com/" style="color: crimson;">La Femme</a> salon as hair dresser and makeup artist</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
