--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             
             <div class="contact-content">
                 <div class="center">
-                    <div class="text">Get in Touch</div>
+                    <div class="text"></div>
                     
                     <div class=" center">
                     <div class="icons">
