--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>After receiving beautician training at <a href="https://in-style-beatuty-salon.business.site/" style="color: white;">InStyle Beauty Salon</a>, Went on to <a href="https://www.loreal.com/en/india/" style="color: white;">L'Oreal professional</a> hairdresser training. Explored freelancing for a while. At the moment, I'm employed at <a href="https://lafemmeindia.com/" style="color: white;">La Femme</a> salon as hair dresser and makeup artist</p>
+                    <p>After receiving beautician training at <a href="https://in-style-beatuty-salon.business.site/" style="color: black;">InStyle Beauty Salon</a>, Went on to <a href="https://www.loreal.com/en/india/" style="color: black;">L'Oreal professional</a> hairdresser training. Explored freelancing for a while. At the moment, I'm employed at <a href="https://lafemmeindia.com/" style="color:  black;">La Femme</a> salon as hair dresser and makeup artist</p>
                     
                 </div>
                 <div class="column right">
@@ -220,6 +220,13 @@
                             <div class="info">
                                 <div class="head">Email</div>
                                 <div class="sub-title">arsheenfmansuri@gmail.com</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-phone"></i>
+                            <div class="info">
+                                <div class="head">Contact Number</div>
+                                <div class="sub-title">+91 92659 23852</div>
                             </div>
                         </div>
                     </div>
