--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <p>Hair color, 
                             Ombre highligths, 
                             French balayage highlights, 
-                            Permanent smoothening keretin, 
+                            Permanent smoothening keratin, 
                             Haircutting, 
                             Hair styling
                             </p>
