--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Arsheen and I'm a <span class="typing-2"></span></div>
-                    <p><strong style="font-size: 30px;">S</strong>tarted of learing as a hair dresser at <strong style="color:crimson">L'Oreal</strong> training center ahmedabad, gradually getting found of the work started investing more time in it. As a result picking up hair dressing professionally. Inspired by xyz started with Makeup as of the lockdown improving on it. With growing confidence started freelancing and working as a head hair dresser at present</p>
+                    <p><strong style="font-size: 30px;">S</strong>tarted off learing as a hair dresser at <strong style="color:crimson">L'Oreal</strong> training center ahmedabad, gradually getting found of the work started investing more time in it. As a result picking up hair dressing professionally. Inspired by xyz started with Makeup as of the lockdown improving on it. With growing confidence started freelancing and working as a head hair dresser at present</p>
                     <a href="#">Download CV</a>
                 </div>
             </div>
@@ -115,7 +115,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Creativity, Customer Service, Listening skills, Tidiness and Time management some of my mastered skills. Received Beautician training at <a href="https://in-style-beatuty-salon.business.site/" style="color: black;">InStyle Beauty Salon</a>, Opted for <a href="https://www.loreal.com/en/india/" style="color: black;">L'Oreal professional</a> hairdresser training. Explored freelancing for a while. At the moment, I'm employed at <a href="https://lafemmeindia.com/" style="color:  black;">La Femme</a> salon as hair dresser and makeup artist...</p>
+                    <p>Creativity, Customer Service, Listening skills, Tidiness and Time management some of the skills always trying to master. Received Beautician training at <a href="https://in-style-beatuty-salon.business.site/" style="color: black;">InStyle Beauty Salon</a>, Opted for <a href="https://www.loreal.com/en/india/" style="color: black;">L'Oreal professional</a> hairdresser training. Explored freelancing for a while. At the moment, I'm employed at <a href="https://lafemmeindia.com/" style="color:  black;">La Femme</a> salon as hair dresser and makeup artist...</p>
                     
                 </div>
                 <div class="column right">
