--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Arsheen and I'm a <span class="typing-2"></span></div>
-                    <p><strong style="font-size: 30px;">S</strong>tarted off learing as a hair dresser at <strong style="color:crimson">L'Oreal</strong> training center ahmedabad, gradually getting found of the work started investing more time in it. As a result picking up hair dressing professionally. Inspired by <strong>Murunal Panchal</strong> started with Makeup as of the lockdown improving on it. With growing confidence started freelancing and working as a head hair dresser at present</p>
+                    <p><strong style="font-size: 30px;">S</strong>tarted off learing as a hair dresser at <strong style="color:crimson">L'Oreal</strong> training center Ahmedabad, gradually getting found of the work started investing more time in it. As a result picking up hair dressing professionally. Inspired by <strong>Murunal Panchal</strong> started with Makeup as of the lockdown improving on it. With growing confidence started freelancing and working as a head hair dresser at present</p>
                     <a href="https://drive.google.com/file/d/1G7sZl79xBeoglN6L7GxXWqcMBofwM7E2/view?usp=sharing">Download CV</a>
                 </div>
             </div>
